--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <div class="play-field"></div>
     <div class="player-wrapper template">
         <div class="player waiting">
-            <div class="display countdown"></div>
+            <div class="display countdown">
+                <div><span></span></div>
+            </div>
             <button>Join</button>
             <div class="display score"><span>00000</span></div>
         </div>
