--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
                 </div>
                 <button>Join</button>
                 <div class="display score"><span>00000</span></div>
-                <div class="crown">
+                <div class="points">
+                    <span data-info="cards-left">99</span> cards left・<span data-info="available-points">200</span>
+                    points to get
+                </div>
+                <div class="crown hidden">
                     <svg>
                         <use xlink:href="#crown"/>
                     </svg>
