adds card design and mechanics

--- a/index.html
+++ b/index.html
@@ -33,9 +33,12 @@
     </symbol>
 </svg>
 <main class="invisible">
-    <div class="bubbles"></div>
+    <div class="bubbles" style="background-size: 70vmin; animation-duration: 120s;"></div>
     <div class="game">
-        <div class="play-field"></div>
+        <div class="play-field">
+            <div class="bubbles" style="background-size: 50vmin; animation-duration: 180s;"></div>
+            <div class="cards"></div>
+        </div>
         <div class="player-wrapper template">
             <div class="player waiting">
                 <div class="display countdown">
