--- a/index.html
+++ b/index.html
@@ -38,19 +38,20 @@
         <div class="play-field">
             <div class="bubbles" style="background-size: 50vmin; animation-duration: 180s;"></div>
             <div class="cards"></div>
+            <button class="action-button">TEXT</button>
         </div>
         <div class="player-wrapper template">
-            <div class="player waiting">
+            <div class="player">
                 <div class="display countdown">
                     <div><span></span></div>
                 </div>
                 <button>Join</button>
                 <div class="display score"><span>00000</span></div>
                 <div class="points">
-                    <span data-info="cards-left">99</span> cards left・<span data-info="available-points">200</span>
+                    <span data-info="cards-left">99</span> cards left・<span data-info="available-points">100</span>
                     points to get
                 </div>
-                <div class="crown hidden">
+                <div class="crown">
                     <svg>
                         <use xlink:href="#crown"/>
                     </svg>
