--- a/index.html
+++ b/index.html
@@ -37,7 +37,17 @@
         <div class="play-field">
             <div class="bubbles" style="background-size: 50vmin; animation-duration: 180s;"></div>
             <div class="cards"></div>
-            <button class="action-button">TEXT</button>
+            <div class="menu start hidden">
+                <h1>SETARA</h1>
+                <button class="menu-button manual">How to?</button>
+                <button class="menu-button normal active">Normal</button>
+                <button class="menu-button expert">Expert</button>
+                <button class="menu-button start disabled">Start</button>
+            </div>
+            <div class="menu start-over hidden">
+                <h1>Game Over</h1>
+                <button class="menu-button start">again</button>
+            </div>
         </div>
         <div class="player-wrapper template">
             <div class="player">
