--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
                 <button class="menu-button expert">Expert</button>
                 <button class="menu-button start disabled">Start</button>
             </div>
+            <div class="menu manual hidden">
+                <h1>SETARA</h1>
+                <p>Find three cards that follow the rules. For each feature (color, count, fill or shape) applies, to
+                    find three cards that either have the <span>same</span> or all <span>different</span> property. Rule
+                    of thumb is, if you count 2 of something, it is not a match!</p>
+                <button class="menu-button back">Back</button>
+            </div>
             <div class="menu start-over hidden">
                 <h1>Game Over</h1>
                 <button class="menu-button start">again</button>
@@ -69,7 +76,7 @@
         </div>
     </div>
 </main>
-<span class="version">v0.3</span>
+<span class="version">v0.4</span>
 <svg class="preloader" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
     <circle r="7" cx="10" cy="10" fill="none" stroke-width="5"></circle>
     <circle r="7" cx="10" cy="10" fill="none" stroke-width="5" class="progress"></circle>
